packages/svelte/tests/compiler-errors/samples/css/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'css-syntax-error',
		message: '"{" is expected',
		position: [24, 24]
	}
});
